--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Register</title>
-  <link rel="stylesheet" href="style.css">
+  <title>User Management</title>
 </head>
 <body>
   <div id="app"></div>
