--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <div id="app"></div>
-  <script src="spa.js"></script>
+  <script type="module" src="spa.js"></script>
 </body>
 </html>
